# prompt-x-lab

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.yml  config.yml  feature-request.yml
.github/assets/: crest.manifest.json
.github/workflows/: ci.yml  codeql.yml  release.yml
.hypothesis/constants/: 070a5b24ba27d1c9  1bf25566ee95aac1  29bf6cabf7a177b8  30dd98882ac2eb2c  32140bd63609fa19  3cb2275d4d7bd024  3de1ef2ba9cbb7b5  4021c5d0cc224223  40b615ac6138a645  46fe242b4fa289bc  53b0e17d4de9390d  634775102f04c4a1  64abe619fa3df5bb  67b0a8ccf18bf5d2  6bd81fa3231f1c8f  7109efe12ff03524  870a9ce3173bde17  9eccde9e503a1a12  a251ccc251545707  a4948f2dc5b06ae1  ae7d67dc28cc7c8d  b53f6cf2348f3c0f  bde60256762f6dd2  cbcd7090253a077d  cd324e6de0c7a3b3  ce8a84587dfde07d  dc04cc507d410685  e69e0d7d7d49ae00  f540d17fcf79465d  fa35bae47359c03d  ff359f72638994e9  ffb0a1bbdfba0674
.metadata/: manifest.yaml  taxonomy.json
00_foundation/: README.md  constraint-primitive.md  identity-primitive.md  output-primitive.md
01_cognition/: README.md  chain-of-thought-scaffold.md  creator-critic-verifier.md  executive-engine.md
02_engineering/: README.md  legacy-refactor-expert.md  senior-code-reviewer.md  test-generator.md
03_personas/: README.md  socratic-tutor.md  strategic-advisor.md
04_validation/: README.md  hallucination-gate.md  logical-fallacy-checker.md
05_orchestration/: AUDIT.sha256  README.md
05_orchestration/agents/: README.md  codex-gh-pr.md  dse-fix.md  pr-docs.md  pr-orch.md  pr-sec-fin.md  pr-sec.md  pr-test.md  pr302.md  urqg.md
05_orchestration/crypto/: README.md  btc-alpha.md  bybit-live.md  nexus-tdf.md
05_orchestration/frameworks/: README.md  bio-s12.md  de-spg.md  elpeg.md  ghtpo-2026.md  ghtpo-v1.md
05_orchestration/protocols/: README.md  dsio.md  ioa.md  lre.md  pge.md  smlrs.md  spst.md
05_orchestration/research/: README.md  ultimate-architect.md  umaa-arch.md  umaa-method.md
06_eca_engine/: AUDIT.sha256  README.md
06_eca_engine/benchmarks/: live-benchmark-protocol.md  metrics.md  scoring-rubric.md
06_eca_engine/core/: config.md  mode-templates.md  overview.md  proof-tiers.md  system-prompt.md  user-context-contract.md
06_eca_engine/docs/: architecture-blueprint.md  calibration-methodology.md  executive-operational-manual.md  implementation-sequence.md  input-guide.md  launch-readiness-report.md  optimization-77-iterations.md  packaging-notes.md  product-spec.md  production-readiness-report.md  release-notes-v1.0.0.md  release-notes-v1.1.0.md  task-completion-matrix-v1.1.md  task-completion-matrix-v1.md  telemetry-audit-plan.md
06_eca_engine/legal/: eula-template.md
06_eca_engine/runtime/: context-budgeting.md  fallback-matrix.md  router-spec.md  runtime-policy.md
06_eca_engine/schemas/: request-envelope.md  response-envelope.md
06_eca_engine/security/: output-provenance-policy.md  prompt-injection-guardrails.md  security-model.md
07_kriterion/: AUDIT.sha256  README.md
07_kriterion/methodology/: anti-fragile-reasoning.md  methodology.md  threat-model.md
07_kriterion/protocols/: dse-intelligence.md  esa-architect.md  gpt54-audit-hardening.md  pse-platform.md  se-ops.md  sse-execution.md
07_kriterion/schemas/: artifact-validation-result.md  canonical-artifact.md  domain-score.md  evaluation-result.md  gate-result.md  governance-invariant-registry.md  orchestration-handoff.md  reference-input-bundle.md  task-score.md
benchmarks/: RESULTS.md  __init__.py  test_canonical_speed.py  test_eca_speed.py
docs/: composition-algebra.md  evaluation-protocol.md  first-principles.md  governance.md  methodology.md  naming-convention.md  references.bib  scaling.md  usage-guide.md  zero-to-hero.md
docs/adr/: 001-canonical-primitive-as-public-api.md  002-layered-integration-with-provenance-audit.md  003-fail-closed-refusal-as-non-negotiable-primitive.md
docs/case-studies/: README.md  executive-engine-fibonacci.md  hallucination-gate-apollo.md  senior-code-reviewer-unbounded-cache.md
evals/: README.md
evals/results/: badges.json
evals/specs/: chain-of-thought-scaffold.yaml  creator-critic-verifier.yaml  executive-engine.yaml  hallucination-gate.yaml  legacy-refactor-expert.yaml  logical-fallacy-checker.yaml  senior-code-reviewer.yaml  socratic-tutor.yaml  strategic-advisor.yaml  test-generator.yaml
schemas/: eval-result.schema.json  eval-spec.schema.json  module.schema.json
src/pxl/: __init__.py  __main__.py  agents.py  assembly.py  audit.py  badges.py  cli.py  console.py  dashboard.py  judge.py  local.py  main.py  models.py  providers.py  reasoning.py  runner.py  scale.py  validator.py
src/pxl/eca/: __init__.py  cli.py  config.py  router.py  schemas.py  scorer.py  signer.py  validate.py
src/pxl/eca/assets/: best_config.yaml  config.yaml  fallback_matrix.yaml  metrics.yaml  output_provenance_policy.yaml  prompt_injection_guardrails.yaml  request_envelope.schema.json  response_envelope.schema.json  router_spec.yaml  runtime_policy.yaml  system_prompt.txt  templates.yaml  user_context_contract.yaml
src/pxl/eca/datasets/: adversarial_dataset.json  adversarial_requests.jsonl  evaluation_summary.json  golden_dataset.jsonl  iterations_77.csv  iterations_77.json  request_example.json  response_example.json  synthetic_requests.jsonl  synthetic_responses.jsonl
src/pxl/kriterion/: __init__.py  benchmark.py  canonical.py  cli.py  protocols.py  schemas.py
templates/: base-module.md
tests/: test_agents.py  test_assembly.py  test_audit.py  test_dashboard.py  test_eca_router.py  test_eca_schemas.py  test_eca_scorer.py  test_eca_signer.py  test_judge.py  test_kriterion_benchmark.py  test_kriterion_canonical.py  test_kriterion_protocols.py  test_kriterion_schemas.py  test_local.py  test_main_cli.py  test_models.py  test_property_canonical.py  test_reasoning.py  test_runner.py  test_scale.py  test_validator.py
(+30 files in other folders)
